--- a/packages/chrome-ext/styles/styles.css
+++ b/packages/chrome-ext/styles/styles.css
@@ -1,27 +1,22 @@
 /* layer: preflights */
 *,::before,::after{--un-rotate:0;--un-rotate-x:0;--un-rotate-y:0;--un-rotate-z:0;--un-scale-x:1;--un-scale-y:1;--un-scale-z:1;--un-skew-x:0;--un-skew-y:0;--un-translate-x:0;--un-translate-y:0;--un-translate-z:0;--un-pan-x: ;--un-pan-y: ;--un-pinch-zoom: ;--un-scroll-snap-strictness:proximity;--un-ordinal: ;--un-slashed-zero: ;--un-numeric-figure: ;--un-numeric-spacing: ;--un-numeric-fraction: ;--un-border-spacing-x:0;--un-border-spacing-y:0;--un-ring-offset-shadow:0 0 rgb(0 0 0 / 0);--un-ring-shadow:0 0 rgb(0 0 0 / 0);--un-shadow-inset: ;--un-shadow:0 0 rgb(0 0 0 / 0);--un-ring-inset: ;--un-ring-offset-width:0px;--un-ring-offset-color:#fff;--un-ring-width:0px;--un-ring-color:rgb(147 197 253 / 0.5);--un-blur: ;--un-brightness: ;--un-contrast: ;--un-drop-shadow: ;--un-grayscale: ;--un-hue-rotate: ;--un-invert: ;--un-saturate: ;--un-sepia: ;--un-backdrop-blur: ;--un-backdrop-brightness: ;--un-backdrop-contrast: ;--un-backdrop-grayscale: ;--un-backdrop-hue-rotate: ;--un-backdrop-invert: ;--un-backdrop-opacity: ;--un-backdrop-saturate: ;--un-backdrop-sepia: ;}::backdrop{--un-rotate:0;--un-rotate-x:0;--un-rotate-y:0;--un-rotate-z:0;--un-scale-x:1;--un-scale-y:1;--un-scale-z:1;--un-skew-x:0;--un-skew-y:0;--un-translate-x:0;--un-translate-y:0;--un-translate-z:0;--un-pan-x: ;--un-pan-y: ;--un-pinch-zoom: ;--un-scroll-snap-strictness:proximity;--un-ordinal: ;--un-slashed-zero: ;--un-numeric-figure: ;--un-numeric-spacing: ;--un-numeric-fraction: ;--un-border-spacing-x:0;--un-border-spacing-y:0;--un-ring-offset-shadow:0 0 rgb(0 0 0 / 0);--un-ring-shadow:0 0 rgb(0 0 0 / 0);--un-shadow-inset: ;--un-shadow:0 0 rgb(0 0 0 / 0);--un-ring-inset: ;--un-ring-offset-width:0px;--un-ring-offset-color:#fff;--un-ring-width:0px;--un-ring-color:rgb(147 197 253 / 0.5);--un-blur: ;--un-brightness: ;--un-contrast: ;--un-drop-shadow: ;--un-grayscale: ;--un-hue-rotate: ;--un-invert: ;--un-saturate: ;--un-sepia: ;--un-backdrop-blur: ;--un-backdrop-brightness: ;--un-backdrop-contrast: ;--un-backdrop-grayscale: ;--un-backdrop-hue-rotate: ;--un-backdrop-invert: ;--un-backdrop-opacity: ;--un-backdrop-saturate: ;--un-backdrop-sepia: ;}
-*,::before,::after{box-sizing:border-box;border:0 solid #e5e7eb;}
-body{margin:0;padding:0;width:320px;}
-button{cursor:pointer;user-select:none;}
-.dark{--bg-color:191f2d;--text-color:#e9e9ea;--secondary-color:#97979e;}
-
 /* layer: shortcuts */
 .container{width:100%;}
 .btn:disabled{pointer-events:none;opacity:0.5;}
 .tab:disabled{pointer-events:none;opacity:0.5;}
-.tablist{display:grid;height:2.25rem;width:100%;align-items:center;justify-content:center;border-radius:0.5rem;background-color:var(--muted-color);padding:0.25rem;--un-text-opacity:1;color:hsl(240 3.8% 46.1% / var(--un-text-opacity));}
+.tablist{display:grid;height:2.25rem;width:100%;align-items:center;justify-content:center;border-radius:0.5rem;background-color:var(--muted-color);padding:0.25rem;color:var(--muted-foreground-color);}
 .label{display:block;font-size:0.875rem;line-height:1.25rem;font-weight:500;line-height:1;}
-.btn{height:2.25rem;display:inline-flex;align-items:center;justify-content:center;white-space:nowrap;border-radius:0.375rem;--un-bg-opacity:1;background-color:hsl(240 5.9% 10% / var(--un-bg-opacity));padding-left:1rem;padding-right:1rem;padding-top:0.5rem;padding-bottom:0.5rem;font-size:0.875rem;line-height:1.25rem;--un-text-opacity:1;color:hsl(0 0% 98% / var(--un-text-opacity));font-weight:500;--un-shadow:var(--un-shadow-inset) 0 1px 3px 0 var(--un-shadow-color, rgb(0 0 0 / 0.1)),var(--un-shadow-inset) 0 1px 2px -1px var(--un-shadow-color, rgb(0 0 0 / 0.1));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);transition-property:color,background-color,border-color,outline-color,text-decoration-color,fill,stroke;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:150ms;}
-.input{height:2.25rem;width:100%;display:flex;border-width:1px;border-radius:0.375rem;background-color:transparent;padding-left:0.75rem;padding-right:0.75rem;padding-top:0.25rem;padding-bottom:0.25rem;font-size:0.875rem;line-height:1.25rem;--un-shadow:var(--un-shadow-inset) 0 1px 2px 0 var(--un-shadow-color, rgb(0 0 0 / 0.05));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}
-.tab{display:inline-flex;align-items:center;justify-content:center;white-space:nowrap;border-radius:0.375rem;padding-left:0.75rem;padding-right:0.75rem;padding-top:0.25rem;padding-bottom:0.25rem;font-size:0.875rem;line-height:1.25rem;font-weight:500;--un-ring-offset-color:var(--bg-color);transition-property:all;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:150ms;}
+.btn{height:2.25rem;display:inline-flex;align-items:center;justify-content:center;white-space:nowrap;border-radius:0.375rem;background-color:var(--primary-color);padding-left:1rem;padding-right:1rem;padding-top:0.5rem;padding-bottom:0.5rem;font-size:0.875rem;line-height:1.25rem;color:var(--primary-foreground-color);font-weight:500;--un-shadow:var(--un-shadow-inset) 0 1px 3px 0 var(--un-shadow-color, rgb(0 0 0 / 0.1)),var(--un-shadow-inset) 0 1px 2px -1px var(--un-shadow-color, rgb(0 0 0 / 0.1));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);transition-property:color,background-color,border-color,outline-color,text-decoration-color,fill,stroke;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:150ms;}
+.input{height:2.25rem;width:100%;display:flex;border-width:1px;border-radius:0.375rem;background-color:transparent;padding-left:0.75rem;padding-right:0.75rem;padding-top:0.25rem;padding-bottom:0.25rem;font-size:0.875rem;line-height:1.25rem;color:var(--text-color);--un-shadow:var(--un-shadow-inset) 0 1px 2px 0 var(--un-shadow-color, rgb(0 0 0 / 0.05));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}
+.tab{display:inline-flex;align-items:center;justify-content:center;white-space:nowrap;border-radius:0.375rem;background-color:var(--muted-color);padding-left:0.75rem;padding-right:0.75rem;padding-top:0.25rem;padding-bottom:0.25rem;font-size:0.875rem;line-height:1.25rem;font-weight:500;--un-ring-offset-color:var(--bg-color);transition-property:all;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:150ms;}
 .input:disabled{cursor:not-allowed;opacity:0.5;}
 .peer:disabled~.label{cursor:not-allowed;opacity:0.7;}
 .tab[data-state=active]{background-color:var(--bg-color);color:var(--text-color);--un-shadow:var(--un-shadow-inset) 0 1px 3px 0 var(--un-shadow-color, rgb(0 0 0 / 0.1)),var(--un-shadow-inset) 0 1px 2px -1px var(--un-shadow-color, rgb(0 0 0 / 0.1));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}
-.btn:hover{background-color:hsl(240 5.9% 10% / 0.9);}
-.input::placeholder{--un-text-opacity:1;color:hsl(240 3.8% 46.1% / var(--un-text-opacity));}
+.btn:hover{background-color:var(--primary-color);}
+.input::placeholder{color:var(--muted-foreground-color);}
 .btn:focus-visible{outline:2px solid transparent;outline-offset:2px;--un-ring-width:1px;--un-ring-offset-shadow:var(--un-ring-inset) 0 0 0 var(--un-ring-offset-width) var(--un-ring-offset-color);--un-ring-shadow:var(--un-ring-inset) 0 0 0 calc(var(--un-ring-width) + var(--un-ring-offset-width)) var(--un-ring-color);box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}
 .input:focus-visible{outline:2px solid transparent;outline-offset:2px;--un-ring-width:1px;--un-ring-offset-shadow:var(--un-ring-inset) 0 0 0 var(--un-ring-offset-width) var(--un-ring-offset-color);--un-ring-shadow:var(--un-ring-inset) 0 0 0 calc(var(--un-ring-width) + var(--un-ring-offset-width)) var(--un-ring-color);box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);--un-ring-opacity:1;--un-ring-color:rgb(161 161 170 / var(--un-ring-opacity));}
-.tab:focus-visible{outline:2px solid transparent;outline-offset:2px;--un-ring-width:2px;--un-ring-offset-shadow:var(--un-ring-inset) 0 0 0 var(--un-ring-offset-width) var(--un-ring-offset-color);--un-ring-shadow:var(--un-ring-inset) 0 0 0 calc(var(--un-ring-width) + var(--un-ring-offset-width)) var(--un-ring-color);box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);--un-ring-offset-width:2px;}
+.tab:focus-visible{outline:2px solid transparent;outline-offset:2px;}
 @media (min-width: 640px){
 .container{max-width:640px;}
 }
@@ -67,6 +62,7 @@ button{cursor:pointer;user-select:none;}
 .m42{margin:10.5rem;}
 .m43{margin:10.75rem;}
 .m44{margin:11rem;}
+.my-20{margin-top:5rem;margin-bottom:5rem;}
 .my-4{margin-top:1rem;margin-bottom:1rem;}
 .mb-2{margin-bottom:0.5rem;}
 .me{margin-inline-end:1rem;}
@@ -111,23 +107,22 @@ button{cursor:pointer;user-select:none;}
 .items-center{align-items:center;}
 .justify-center{justify-content:center;}
 .divide-y>:not([hidden])~:not([hidden]){--un-divide-y-reverse:0;border-top-width:calc(1px * calc(1 - var(--un-divide-y-reverse)));border-bottom-width:calc(1px * var(--un-divide-y-reverse));}
-.divide-gray-100>:not([hidden])~:not([hidden]){--un-divide-opacity:1;border-color:rgb(243 244 246 / var(--un-divide-opacity));}
+.divide-border>:not([hidden])~:not([hidden]){border-color:var(--border-color);}
 .overflow-y-auto{overflow-y:auto;}
 .truncate{overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
 .whitespace-nowrap{white-space:nowrap;}
 .b,
 .border{border-width:1px;}
-.border-gray-300{--un-border-opacity:1;border-color:rgb(209 213 219 / var(--un-border-opacity));}
 .rounded{border-radius:0.25rem;}
 .rounded-lg{border-radius:0.5rem;}
 .rounded-md{border-radius:0.375rem;}
-.bg-muted{background-color:var(--muted-color);}
-.bg-primary{--un-bg-opacity:1;background-color:hsl(240 5.9% 10% / var(--un-bg-opacity));}
-.bg-transparent{background-color:transparent;}
-.bg-white{--un-bg-opacity:1;background-color:rgb(255 255 255 / var(--un-bg-opacity));}
+.bg-background,
 .data-\[state\=active\]\:bg-background[data-state=active]{background-color:var(--bg-color);}
-.hover\:bg-gray-50:hover{--un-bg-opacity:1;background-color:rgb(249 250 251 / var(--un-bg-opacity));}
-.hover\:bg-primary\/90:hover{background-color:hsl(240 5.9% 10% / 0.9);}
+.bg-muted{background-color:var(--muted-color);}
+.bg-primary{background-color:var(--primary-color);}
+.bg-transparent{background-color:transparent;}
+.hover\:bg-background-hover:hover{background-color:var(--bg-hover-color);}
+.hover\:bg-primary\/90:hover{background-color:var(--primary-color);}
 .p-1,
 .p1{padding:0.25rem;}
 .p-4,
@@ -145,13 +140,13 @@ button{cursor:pointer;user-select:none;}
 .text-10px{font-size:10px;}
 .text-base{font-size:1rem;line-height:1.5rem;}
 .text-sm{font-size:0.875rem;line-height:1.25rem;}
-.data-\[state\=active\]\:text-foreground[data-state=active]{color:var(--text-color);}
-.text-black{--un-text-opacity:1;color:rgb(0 0 0 / var(--un-text-opacity));}
-.text-gray-300{--un-text-opacity:1;color:rgb(209 213 219 / var(--un-text-opacity));}
-.text-muted-foreground{--un-text-opacity:1;color:hsl(240 3.8% 46.1% / var(--un-text-opacity));}
-.text-primary-foreground{--un-text-opacity:1;color:hsl(0 0% 98% / var(--un-text-opacity));}
+.data-\[state\=active\]\:text-foreground[data-state=active],
+.text-foreground{color:var(--text-color);}
+.text-muted{color:var(--muted-color);}
+.text-muted-foreground{color:var(--muted-foreground-color);}
+.text-primary-foreground{color:var(--primary-foreground-color);}
 .text-red-500{--un-text-opacity:1;color:rgb(239 68 68 / var(--un-text-opacity));}
-.placeholder\:text-muted-foreground::placeholder{--un-text-opacity:1;color:hsl(240 3.8% 46.1% / var(--un-text-opacity));}
+.placeholder\:text-muted-foreground::placeholder{color:var(--muted-foreground-color);}
 .font-medium{font-weight:500;}
 .leading-none{line-height:1;}
 .uppercase{text-transform:uppercase;}
@@ -165,6 +160,7 @@ button{cursor:pointer;user-select:none;}
 .data-\[state\=active\]\:shadow[data-state=active],
 .shadow{--un-shadow:var(--un-shadow-inset) 0 1px 3px 0 var(--un-shadow-color, rgb(0 0 0 / 0.1)),var(--un-shadow-inset) 0 1px 2px -1px var(--un-shadow-color, rgb(0 0 0 / 0.1));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}
 .shadow-md{--un-shadow:var(--un-shadow-inset) 0 4px 6px -1px var(--un-shadow-color, rgb(0 0 0 / 0.1)),var(--un-shadow-inset) 0 2px 4px -2px var(--un-shadow-color, rgb(0 0 0 / 0.1));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}
+.shadow-shadow{--un-shadow-color:var(--shadow-color);}
 .shadow-sm{--un-shadow:var(--un-shadow-inset) 0 1px 2px 0 var(--un-shadow-color, rgb(0 0 0 / 0.05));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}
 .outline{outline-style:solid;}
 .focus-visible\:outline-none:focus-visible{outline:2px solid transparent;outline-offset:2px;}
